# smiles-bd

./: .gitignore  README.md  environment.yml  note.md  pyproject.toml  requirements.txt  vocab.txt
configs/: default.yaml  smiles-train.yaml  test_packed1024.yaml  train.yaml
data/tiny-pubchem-smiles/: train-00000-of-00001.parquet  validation-00000-of-00001.parquet
examples/: toy_vocab.txt
examples/toy_data/: train.txt  valid.txt
src/: checkpoint.py  model.py  sample.py  schedule.py  tokenizer.py  train.py  utils.py
src/smiles_bd/: __init__.py  checkpoint.py  config.py  data.py  diffusion.py  model.py  sample.py  schedule.py  tokenizer.py  tokenizer_smiles.py  train.py  utils.py
tests/: conftest.py  test_arrow_dataset.py  test_config_utils.py  test_dataset.py  test_diffusion.py  test_model_forward.py  test_sampling.py  test_schedule.py  test_smoke.py  test_text_dataset.py  test_tokenizer.py  test_tokenizer_decode_pad.py  test_tokenizer_smiles_comprehensive.py  test_train_loop_smoke.py  test_training_and_sampling.py  test_training_step.py  test_vocab_and_tokenizer.py
tools/: arrow_mini.py  calculate_mean_tokens.py  check_no_unk_in_arrow.py
