[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smiles-bd"
version = "0.2.0"
description = "SMILES Block Diffusion (refactored)"
authors = [{name="Qianwei"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "datasets>=2.14.0",
    "pyarrow>=11.0.0",
    "tqdm",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
